# backend/api/filters.py
@@ -15,14 +15,14 @@ class IngredientFilter(FilterSet):
 
 class RecipeFilter(FilterSet):
     tags = filters.ModelMultipleChoiceFilter(
-        field_name='tags_slug',
+        field_name='tags',
         to_field_name='slug',
         queryset=Tag.objects.all(),
     )
 
     is_favorited = filters.BooleanFilter(method='filter_is_favorited')
-    is_in_basket = filters.BooleanFilter(
-        method='filter_is_in_basket')
+    is_in_shopping_cart = filters.BooleanFilter(
+        method='filter_is_in_shopping_cart')
 
     class Meta:
         model = Recipe
@@ -34,8 +34,8 @@ class RecipeFilter(FilterSet):
             return queryset.filter(favorites__user=user)
         return queryset
 
-    def filter_is_in_basket(self, queryset, name, value):
+    def filter_is_in_shopping_cart(self, queryset, name, value):
         user = self.request.user
         if value and not user.is_anonymous:
-            return queryset.filter(basket__user=user)
+            return queryset.filter(shopping_cart__user=user)
         return queryset
